@startuml

title __COMMAND_SERVICE's Class Diagram__\n

  namespace wasteless.server {
    namespace business {
      namespace command_service {
        class wasteless.server.business.command_service.GroceryListCommandService {
            + GroceryListCommandService()
            + createGroceryList()
            + deleteGroceryList()
            + updateGroceryList()
        }

        class wasteless.server.business.command_service.ItemCommandService {
                    + ItemCommandService()
                    + createItem()
                    + deleteItem()
                    + updateItem()
        }
        class wasteless.server.business.command_service.UserCommandService {
                             + UserCommandService()
                             + createUser()
                             + deleteUser()
                             + updateUser()
         }
      }
    }
  }
  



  wasteless.server.business.command_service.GroceryListCommandService o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
  wasteless.server.business.command_service.GroceryListCommandService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
  wasteless.server.business.command_service.GroceryListCommandService o-- wasteless.server.persistance.UserRepository : userRepository
  wasteless.server.business.command_service.ItemCommandService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
  wasteless.server.business.command_service.ItemCommandService o-- wasteless.server.persistance.ItemRepository : itemRepository
  wasteless.server.business.command_service.UserCommandService o-- wasteless.server.persistance.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
